deps/UniKey.h

long UniKey_Calculate2(WORD* pHandle, DWORD* pStartAddress, DWORD* pSeed, WORD* pRegA, WORD* pRegB, WORD* pRegC, WORD* pRegD);
long UniKey_Calculate3(WORD* pHandle, DWORD* pStartAddress, DWORD* pModule, WORD* pRegA, WORD* pRegB, WORD* pRegC, WORD* pRegD);
long UniKey_Generate_New_Password(WORD* pHandle, DWORD* pSeed, WORD* pPassword1, WORD* pPassword2, WORD* pPassword3, WORD* pPassword4);
long UniKey_Generate_Key(WORD* pHandle, DWORD* pKeyNumber);
long UniKey_Generate_Key_Via_Seed(WORD* pHandle, DWORD* pKeyNumber, WORD* pSeed1, WORD* pSeed2, WORD* pSeed3, WORD* pSeed4);
long UniKey_Encrypt(WORD* pHandle, DWORD* pBufferLength, DWORD* pKeyNumber, BYTE *pBuffer);
long UniKey_Decrypt(WORD* pHandle, DWORD* pBufferLength, DWORD* pKeyNumber, BYTE *pBuffer);
long UniKey_MD5(WORD* pHandle, DWORD* pBufferLength, BYTE *pBuffer);
long UniKey_Read_UpdateTag(WORD* pHandle, DWORD* pUpdateTag);
long UniKey_Write_UpdateTag(WORD* pHandle, DWORD* pUpdateTag);
// 2. UniKey Time only API
long UniKey_Get_Time(WORD* pHandle, DWORD* pYear, DWORD* pMonth, WORD* pDay, WORD* pHour, WORD* pMinute, WORD* pSecond);
long UniKey_Set_Time(WORD* pHandle, DWORD* pYear, DWORD* pMonth, WORD* pDay, WORD* pHour, WORD* pMinute, WORD* pSecond);
long UniKey_Set_Time_Now(WORD* pHandle);
long UniKey_Erase_Time_Module(WORD* pHandle, DWORD* pModule);
long UniKey_Set_Time_Module_Start_Time(WORD* pHandle, DWORD* pModule, WORD* pYear, WORD* pMonth, WORD* pDay, WORD* pHour);
long UniKey_Set_Time_Module_Start_Time_Now(WORD* pHandle, DWORD* pModule);
long UniKey_Set_Time_Module_Start_Time_Now_PC(WORD* pHandle, DWORD* pModule);
long UniKey_Set_Time_Module_End_Time(WORD* pHandle, DWORD* pModule, WORD* pYear, WORD* pMonth, WORD* pDay, WORD* pHour);
long UniKey_Set_Time_Module_Duration(WORD* pHandle, DWORD* pModule, DWORD* pYear, WORD* pDay);
long UniKey_Check_Time_Module(WORD* pHandle, DWORD* pModule, DWORD* pRemainDays, WORD* pYear, WORD* pMonth, WORD* pDay, WORD* pHour);
long UniKey_Check_Time_Module_Now(WORD* pHandle, DWORD* pModule, DWORD* pRemainDays, WORD *pRemainHours);
long UniKey_Check_Time_Module_Now_PC(WORD* pHandle, DWORD* pModule, DWORD* pRemainDays, WORD *pRemainHours);
long UniKey_Get_Module_Start_Time(WORD* pHandle, DWORD* pModule, WORD* pYear, WORD* pMonth, WORD* pDay, WORD* pHour);
long UniKey_Get_Module_End_Time(WORD* pHandle, DWORD* pModule, WORD* pYear, WORD* pMonth, WORD* pDay, WORD* pHour);
// 3. Network Functions
long UniKey_Get_Dongle_Location(WORD* pHandle, DWORD* pIPAddress);
long UniKey_Get_Cli_Num(WORD* pHandle, DWORD* cnt);
long UniKey_Get_Max_Num(WORD* pHandle, WORD* cnt);
long UniKey_Set_Max_Num(WORD *pHandle, WORD *cnt);
// 4. define the standard NetUniKey API
long UniKey(WORD Function, WORD* handle, DWORD* lp1, DWORD* lp2, WORD* p1, WORD* p2, WORD* p3, WORD* p4, BYTE* buffer);