src/dongle/bindings.rs

extern "C" {
    pub fn UniKey_Calculate2(
        pHandle: *mut ::std::os::raw::c_ushort,
        pStartAddress: *mut ::std::os::raw::c_uint,
        pSeed: *mut ::std::os::raw::c_uint,
        pRegA: *mut ::std::os::raw::c_ushort,
        pRegB: *mut ::std::os::raw::c_ushort,
        pRegC: *mut ::std::os::raw::c_ushort,
        pRegD: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Calculate3(
        pHandle: *mut ::std::os::raw::c_ushort,
        pStartAddress: *mut ::std::os::raw::c_uint,
        pModule: *mut ::std::os::raw::c_uint,
        pRegA: *mut ::std::os::raw::c_ushort,
        pRegB: *mut ::std::os::raw::c_ushort,
        pRegC: *mut ::std::os::raw::c_ushort,
        pRegD: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Generate_New_Password(
        pHandle: *mut ::std::os::raw::c_ushort,
        pSeed: *mut ::std::os::raw::c_uint,
        pPassword1: *mut ::std::os::raw::c_ushort,
        pPassword2: *mut ::std::os::raw::c_ushort,
        pPassword3: *mut ::std::os::raw::c_ushort,
        pPassword4: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Generate_Key(
        pHandle: *mut ::std::os::raw::c_ushort,
        pKeyNumber: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Generate_Key_Via_Seed(
        pHandle: *mut ::std::os::raw::c_ushort,
        pKeyNumber: *mut ::std::os::raw::c_uint,
        pSeed1: *mut ::std::os::raw::c_ushort,
        pSeed2: *mut ::std::os::raw::c_ushort,
        pSeed3: *mut ::std::os::raw::c_ushort,
        pSeed4: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Encrypt(
        pHandle: *mut ::std::os::raw::c_ushort,
        pBufferLength: *mut ::std::os::raw::c_uint,
        pKeyNumber: *mut ::std::os::raw::c_uint,
        pBuffer: *mut ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Decrypt(
        pHandle: *mut ::std::os::raw::c_ushort,
        pBufferLength: *mut ::std::os::raw::c_uint,
        pKeyNumber: *mut ::std::os::raw::c_uint,
        pBuffer: *mut ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_MD5(
        pHandle: *mut ::std::os::raw::c_ushort,
        pBufferLength: *mut ::std::os::raw::c_uint,
        pBuffer: *mut ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Read_UpdateTag(
        pHandle: *mut ::std::os::raw::c_ushort,
        pUpdateTag: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Write_UpdateTag(
        pHandle: *mut ::std::os::raw::c_ushort,
        pUpdateTag: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Get_Time(
        pHandle: *mut ::std::os::raw::c_ushort,
        pYear: *mut ::std::os::raw::c_uint,
        pMonth: *mut ::std::os::raw::c_uint,
        pDay: *mut ::std::os::raw::c_ushort,
        pHour: *mut ::std::os::raw::c_ushort,
        pMinute: *mut ::std::os::raw::c_ushort,
        pSecond: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Set_Time(
        pHandle: *mut ::std::os::raw::c_ushort,
        pYear: *mut ::std::os::raw::c_uint,
        pMonth: *mut ::std::os::raw::c_uint,
        pDay: *mut ::std::os::raw::c_ushort,
        pHour: *mut ::std::os::raw::c_ushort,
        pMinute: *mut ::std::os::raw::c_ushort,
        pSecond: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Set_Time_Now(pHandle: *mut ::std::os::raw::c_ushort) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Erase_Time_Module(
        pHandle: *mut ::std::os::raw::c_ushort,
        pModule: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Set_Time_Module_Start_Time(
        pHandle: *mut ::std::os::raw::c_ushort,
        pModule: *mut ::std::os::raw::c_uint,
        pYear: *mut ::std::os::raw::c_ushort,
        pMonth: *mut ::std::os::raw::c_ushort,
        pDay: *mut ::std::os::raw::c_ushort,
        pHour: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Set_Time_Module_Start_Time_Now(
        pHandle: *mut ::std::os::raw::c_ushort,
        pModule: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Set_Time_Module_Start_Time_Now_PC(
        pHandle: *mut ::std::os::raw::c_ushort,
        pModule: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Set_Time_Module_End_Time(
        pHandle: *mut ::std::os::raw::c_ushort,
        pModule: *mut ::std::os::raw::c_uint,
        pYear: *mut ::std::os::raw::c_ushort,
        pMonth: *mut ::std::os::raw::c_ushort,
        pDay: *mut ::std::os::raw::c_ushort,
        pHour: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Set_Time_Module_Duration(
        pHandle: *mut ::std::os::raw::c_ushort,
        pModule: *mut ::std::os::raw::c_uint,
        pYear: *mut ::std::os::raw::c_uint,
        pDay: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Check_Time_Module(
        pHandle: *mut ::std::os::raw::c_ushort,
        pModule: *mut ::std::os::raw::c_uint,
        pRemainDays: *mut ::std::os::raw::c_uint,
        pYear: *mut ::std::os::raw::c_ushort,
        pMonth: *mut ::std::os::raw::c_ushort,
        pDay: *mut ::std::os::raw::c_ushort,
        pHour: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Check_Time_Module_Now(
        pHandle: *mut ::std::os::raw::c_ushort,
        pModule: *mut ::std::os::raw::c_uint,
        pRemainDays: *mut ::std::os::raw::c_uint,
        pRemainHours: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Check_Time_Module_Now_PC(
        pHandle: *mut ::std::os::raw::c_ushort,
        pModule: *mut ::std::os::raw::c_uint,
        pRemainDays: *mut ::std::os::raw::c_uint,
        pRemainHours: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Get_Module_Start_Time(
        pHandle: *mut ::std::os::raw::c_ushort,
        pModule: *mut ::std::os::raw::c_uint,
        pYear: *mut ::std::os::raw::c_ushort,
        pMonth: *mut ::std::os::raw::c_ushort,
        pDay: *mut ::std::os::raw::c_ushort,
        pHour: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Get_Module_End_Time(
        pHandle: *mut ::std::os::raw::c_ushort,
        pModule: *mut ::std::os::raw::c_uint,
        pYear: *mut ::std::os::raw::c_ushort,
        pMonth: *mut ::std::os::raw::c_ushort,
        pDay: *mut ::std::os::raw::c_ushort,
        pHour: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Get_Dongle_Location(
        pHandle: *mut ::std::os::raw::c_ushort,
        pIPAddress: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Get_Cli_Num(
        pHandle: *mut ::std::os::raw::c_ushort,
        cnt: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Get_Max_Num(
        pHandle: *mut ::std::os::raw::c_ushort,
        cnt: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey_Set_Max_Num(
        pHandle: *mut ::std::os::raw::c_ushort,
        cnt: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn UniKey(
        Function: ::std::os::raw::c_ushort,
        handle: *mut ::std::os::raw::c_ushort,
        lp1: *mut ::std::os::raw::c_uint,
        lp2: *mut ::std::os::raw::c_uint,
        p1: *mut ::std::os::raw::c_ushort,
        p2: *mut ::std::os::raw::c_ushort,
        p3: *mut ::std::os::raw::c_ushort,
        p4: *mut ::std::os::raw::c_ushort,
        buffer: *mut ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_long;
}
